added header layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,45 @@
 </head>
 
 <body>
+    <header class="bg-lightblue">
+        <nav class="flex-between">
+            <div class="nav-left flex-between">
+                <h1>logo</h1>
+                <ul>
+                    <li>
+                        <a href="">link</a>
+                    </li>
+                    <li><a href="">link</a></li>
+                    <li><a href="">link</a></li>
+                </ul>
+            </div>
+            <div class="nav-right flex-between">
+                <ul>
+                    <li><a href="">link</a></li>
+                    <li><a href="">link</a></li>
+                    <li><a href="">link</a></li>
+                </ul>
+                <button>bottone blu</button>
+            </div>
+        </nav>
 
+        <section class="jumbotron container-big m-centered">
+            <h1>TITOLO</h1>
+            <div class="jumbotron-box flex-between">
+                <div class="jumbotron-info">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis modi esse, impedit expedita est
+                        quia sunt qui neque vero accusamus nesciunt iste doloremque sint dolore libero, velit id autem
+                        obcaecati!
+                    </p>
+                    <button>bottone blu</button>
+                    <p>Lorem</p>
+                    <p>&darr;</p>
+                </div>
+                <div class="jumbotron-img">IMG</div>
+            </div>
+        </section>
+    </header>
 </body>
 
 </html>
