added subscription-plan section layout

--- a/index.html
+++ b/index.html
@@ -53,6 +53,112 @@
             </div>
         </section>
     </header>
+
+    <main>
+        <section class="subscription-plan container-small m-centered">
+            <h2>TITOLETTO</h2>
+            <input type="radio" name="billing frequency" id="">
+            <input type="radio" name="billing frequency" id="">
+            <div class="sub-options flex-between">
+                <article class="plan-card">
+                    <p class="sub-user">User</p>
+                    <h3>Titolino</h3>
+                    <p class="sub-cost">10 &euro;</p>
+                    <p>/mese</p>
+                    <ul class="sub-benefit">
+                        <li>
+                            Lorem
+                        </li>
+                        <li>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        </li>
+                        <li>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, praesentium et ab, minus
+                            laborum quaerat minima libero ipsa quas ratione cumque eum laboriosam deleniti dicta
+                            dolores. Provident dignissimos voluptatibus inventore?
+                        </li>
+                    </ul>
+                    <button>bottone blu</button>
+                    <span>oppure</span><a href="">acquista ora</a>
+                    <ul class="sub-recap">Punti salienti del piano
+                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                    </ul>
+                </article>
+                <article class="plan-card">
+                    <p class="sub-user">User</p>
+                    <h3>Titolino</h3>
+                    <p class="sub-cost">10 &euro;</p>
+                    <p>/mese</p>
+                    <ul class="sub-benefit">
+                        <li>
+                            Lorem
+                        </li>
+                        <li>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        </li>
+                        <li>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, praesentium et ab, minus
+                            laborum quaerat minima libero ipsa quas ratione cumque eum laboriosam deleniti dicta
+                            dolores. Provident dignissimos voluptatibus inventore?
+                        </li>
+                    </ul>
+                    <button>bottone blu</button>
+                    <span>oppure</span><a href="">acquista ora</a>
+                    <ul class="sub-recap">Punti salienti del piano
+                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                    </ul>
+                </article>
+                <article class="plan-card">
+                    <p class="sub-user">User</p>
+                    <h3>Titolino</h3>
+                    <p class="sub-cost">10 &euro;</p>
+                    <p>/mese</p>
+                    <ul class="sub-benefit">
+                        <li>
+                            Lorem
+                        </li>
+                        <li>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        </li>
+                        <li>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, praesentium et ab, minus
+                            laborum quaerat minima libero ipsa quas ratione cumque eum laboriosam deleniti dicta
+                            dolores. Provident dignissimos voluptatibus inventore?
+                        </li>
+                    </ul>
+                    <button>bottone blu</button>
+                    <span>oppure</span><a href="">acquista ora</a>
+                    <ul class="sub-recap">Punti salienti del piano
+                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                    </ul>
+                </article>
+                <article class="plan-card custom-plan">
+                    <p class="sub-user">User</p>
+                    <div class="flex-between">
+                        <div>
+                            <h3>Titolino</h3>
+                            <p class="sub-cost">lorem</p>
+                            <p>lorem</p>
+                        </div>
+                        <div>
+                            <button>bottone blu</button>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
