added dropbox-partner and dropbox-business sections layout

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </nav>
 
-        <section class="jumbotron container-big m-centered">
+        <section class="jumbotron container-big">
             <h1>TITOLO</h1>
             <div class="jumbotron-box flex-between">
                 <div class="jumbotron-info">
@@ -55,7 +55,7 @@
     </header>
 
     <main>
-        <section class="subscription-plan container-small m-centered">
+        <section class="subscription-plan container-small">
             <h2>TITOLETTO</h2>
             <input type="radio" name="billing frequency" id="">
             <input type="radio" name="billing frequency" id="">
@@ -153,6 +153,84 @@
                     </div>
                 </article>
             </div>
+        </section>
+
+        <section class="dropbox-partner container-small flex-between">
+            <div>IMG</div>
+            <div class="partner-info">
+                <h2>Titoletto</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur quae consequuntur quas
+                    saepe, quasi enim id quaerat nobis accusantium numquam corporis earum, deserunt tempore
+                    voluptatibus incidunt facilis commodi aliquid! Id.
+                </p>
+                <button>bottone bianco</button>
+            </div>
+        </section>
+
+        <section class="dropbox-business container-small">
+            <h2>TITOLETTO DROPBOX BUSINESS</h2>
+            <div class="dbusiness-features flex-between">
+                <article class="feature-card">
+                    <div>IMG</div>
+                    <h3>Titolino feature</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit suscipit consectetur sapiente
+                        accusantium illo aspernatur, ullam dicta veritatis maiores, provident tempore, nulla ad quo
+                        fugiat recusandae earum officiis consequuntur?
+                    </p>
+                </article>
+                <article class="feature-card">
+                    <div>IMG</div>
+                    <h3>Titolino feature</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit suscipit consectetur sapiente
+                        accusantium illo aspernatur, ullam dicta veritatis maiores, provident tempore, nulla ad quo
+                        fugiat recusandae earum officiis consequuntur?
+                    </p>
+                </article>
+                <article class="feature-card">
+                    <div>IMG</div>
+                    <h3>Titolino feature</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit suscipit consectetur sapiente
+                        accusantium illo aspernatur, ullam dicta veritatis maiores, provident tempore, nulla ad quo
+                        fugiat recusandae earum officiis consequuntur?
+                    </p>
+                </article>
+                <article class="feature-card">
+                    <div>IMG</div>
+                    <h3>Titolino feature</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit suscipit consectetur sapiente
+                        accusantium illo aspernatur, ullam dicta veritatis maiores, provident tempore, nulla ad quo
+                        fugiat recusandae earum officiis consequuntur?
+                    </p>
+                </article>
+                <article class="feature-card">
+                    <div>IMG</div>
+                    <h3>Titolino feature</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit suscipit consectetur sapiente
+                        accusantium illo aspernatur, ullam dicta veritatis maiores, provident tempore, nulla ad quo
+                        fugiat recusandae earum officiis consequuntur?
+                    </p>
+                </article>
+                <article class="feature-card">
+                    <div>IMG</div>
+                    <h3>Titolino feature</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit suscipit consectetur sapiente
+                        accusantium illo aspernatur, ullam dicta veritatis maiores, provident tempore, nulla ad quo
+                        fugiat recusandae earum officiis consequuntur?
+                    </p>
+                </article>
+            </div>
+        </section>
+
+        <section class="container-small">
+            <h2>TITOLETTO</h2>
+            <a href="">Scopri di più sui nostri clienti</a>
         </section>
     </main>
 
