--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
 
@@ -32,7 +35,7 @@
                     <li><a href="">link</a></li>
                     <li><a href="">link</a></li>
                 </ul>
-                <button>bottone blu</button>
+                <div>bottone blu</div>
             </div>
         </nav>
 
@@ -45,7 +48,7 @@
                         quia sunt qui neque vero accusamus nesciunt iste doloremque sint dolore libero, velit id autem
                         obcaecati!
                     </p>
-                    <button>bottone blu</button>
+                    <div>bottone blu</div>
                     <p>Lorem</p>
                     <p>&darr;</p>
                 </div>
@@ -78,7 +81,7 @@
                             dolores. Provident dignissimos voluptatibus inventore?
                         </li>
                     </ul>
-                    <button>bottone blu</button>
+                    <div>bottone blu</div>
                     <span>oppure</span><a href="">acquista ora</a>
                     <ul class="sub-recap">Punti salienti del piano
                         <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
@@ -103,7 +106,7 @@
                             dolores. Provident dignissimos voluptatibus inventore?
                         </li>
                     </ul>
-                    <button>bottone blu</button>
+                    <div>bottone blu</div>
                     <span>oppure</span><a href="">acquista ora</a>
                     <ul class="sub-recap">Punti salienti del piano
                         <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
@@ -131,7 +134,7 @@
                             dolores. Provident dignissimos voluptatibus inventore?
                         </li>
                     </ul>
-                    <button>bottone blu</button>
+                    <div>bottone blu</div>
                     <span>oppure</span><a href="">acquista ora</a>
                     <ul class="sub-recap">Punti salienti del piano
                         <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
@@ -148,7 +151,7 @@
                             <p>lorem</p>
                         </div>
                         <div>
-                            <button>bottone blu</button>
+                            <div>bottone blu</div>
                         </div>
                     </div>
                 </article>
@@ -164,7 +167,7 @@
                     saepe, quasi enim id quaerat nobis accusantium numquam corporis earum, deserunt tempore
                     voluptatibus incidunt facilis commodi aliquid! Id.
                 </p>
-                <button>bottone bianco</button>
+                <div>bottone bianco</div>
             </div>
         </section>
 
@@ -231,6 +234,67 @@
         <section class="container-small">
             <h2>TITOLETTO</h2>
             <a href="">Scopri di più sui nostri clienti</a>
+        </section>
+
+        <section class="customer-teams flex-between">
+            <div class="customers">
+                <div>
+                    <div class="customer">LOGO</div>
+                    <div class="customer">LOGO</div>
+                </div>
+                <div>
+                    <div class="customer">LOGO</div>
+                    <div class="customer">LOGO</div>
+                </div>
+            </div>
+            <div class="customer-info">
+                <div>LOGO</div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure suscipit autem ea magni debitis
+                    incidunt labore libero, tempore aperiam consequatur eos asperiores ullam minus quos molestias alias
+                    qui accusamus delectus?
+                </p>
+                <p>cit.</p>
+            </div>
+            <div class="customers">
+                <div>
+                    <div class="customer">LOGO</div>
+                    <div class="customer">LOGO</div>
+                </div>
+                <div>
+                    <div class="customer">LOGO</div>
+                    <div class="customer">LOGO</div>
+                </div>
+            </div>
+        </section>
+
+        <section class="bg-lightblue">
+            <div class="container-small flex-between">
+                <h2>TITOLETTO</h2>
+                <div>bottone bianco</div>
+            </div>
+        </section>
+
+        <section class="faq container-small">
+            <h2>Domande frequenti</h2>
+            <div class="question flex-between">
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                </p>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+            <div class="question flex-between">
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                </p>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+            <div class="question flex-between">
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                </p>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
         </section>
     </main>
 
