added footer layout

--- a/index.html
+++ b/index.html
@@ -299,7 +299,100 @@
     </main>
 
     <footer>
-
+        <section class="container-big">
+            <nav class="flex-between">
+                <ul>Dropbox
+                    <li>
+                        <a href="">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a href="">Perché Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="">Piani</a>
+                    </li>
+                    <li>
+                        <a href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="">Funzioni</a>
+                    </li>
+                </ul>
+                <ul>Prodotti
+                    <li>
+                        <a href="">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a href="">Perché Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="">Piani</a>
+                    </li>
+                    <li>
+                        <a href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="">Funzioni</a>
+                    </li>
+                </ul>
+                <ul>Azienda
+                    <li>
+                        <a href="">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a href="">Perché Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="">Piani</a>
+                    </li>
+                    <li>
+                        <a href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="">Funzioni</a>
+                    </li>
+                </ul>
+                <ul>Supporto
+                    <li>
+                        <a href="">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a href="">Perché Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="">Piani</a>
+                    </li>
+                    <li>
+                        <a href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="">Funzioni</a>
+                    </li>
+                </ul>
+                <ul>Community
+                    <li>
+                        <a href="">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a href="">Perché Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="">Piani</a>
+                    </li>
+                    <li>
+                        <a href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="">Funzioni</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="language">
+                <span>
+                    Italiano &#11205;
+                </span>
+            </div>
+        </section>
     </footer>
 </body>
 
