--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li><a href="">link</a></li>
                     <li><a href="">link</a></li>
                 </ul>
-                <div>bottone blu</div>
+                <button>Inizia</button>
             </div>
         </nav>
 
@@ -48,7 +48,7 @@
                         quia sunt qui neque vero accusamus nesciunt iste doloremque sint dolore libero, velit id autem
                         obcaecati!
                     </p>
-                    <div>bottone blu</div>
+                    <button>Inizia la tua prova gratuita</button>
                     <p>Lorem</p>
                     <p>&darr;</p>
                 </div>
@@ -81,7 +81,9 @@
                             dolores. Provident dignissimos voluptatibus inventore?
                         </li>
                     </ul>
-                    <div>bottone blu</div>
+                    <button>
+                        Prova gratis per 30 giorni
+                    </button>
                     <span>oppure</span><a href="">acquista ora</a>
                     <ul class="sub-recap">Punti salienti del piano
                         <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
@@ -106,7 +108,9 @@
                             dolores. Provident dignissimos voluptatibus inventore?
                         </li>
                     </ul>
-                    <div>bottone blu</div>
+                    <button>
+                        Prova gratis per 30 giorni
+                    </button>
                     <span>oppure</span><a href="">acquista ora</a>
                     <ul class="sub-recap">Punti salienti del piano
                         <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
@@ -134,7 +138,9 @@
                             dolores. Provident dignissimos voluptatibus inventore?
                         </li>
                     </ul>
-                    <div>bottone blu</div>
+                    <button>
+                        Contattaci
+                    </button>
                     <span>oppure</span><a href="">acquista ora</a>
                     <ul class="sub-recap">Punti salienti del piano
                         <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
@@ -151,7 +157,9 @@
                             <p>lorem</p>
                         </div>
                         <div>
-                            <div>bottone blu</div>
+                            <button>
+                                Contatta l'ufficio vendite
+                            </button>
                         </div>
                     </div>
                 </article>
@@ -167,7 +175,7 @@
                     saepe, quasi enim id quaerat nobis accusantium numquam corporis earum, deserunt tempore
                     voluptatibus incidunt facilis commodi aliquid! Id.
                 </p>
-                <div>bottone bianco</div>
+                <button class="btn-white">Trova un partner</button>
             </div>
         </section>
 
@@ -271,7 +279,7 @@
         <section class="bg-lightblue">
             <div class="container-small flex-between">
                 <h2>TITOLETTO</h2>
-                <div>bottone bianco</div>
+                <button class="btn-white">Inizia la tua prova gratuita</button>
             </div>
         </section>
 
