fixed jumbotron layout, added header and jumbotron content

--- a/index.html
+++ b/index.html
@@ -17,48 +17,67 @@
 </head>
 
 <body>
-    <header class="bg-lightblue">
+    <header>
         <nav class="flex-between">
             <div class="nav-left flex-between">
-                <h1>logo</h1>
+                <a href="#">
+                    <img src="img/logo-small.png" alt="Dropbox Logo">
+                </a>
                 <ul>
                     <li>
-                        <a href="">link</a>
+                        <a href="">Perché Dropbox</a>
                     </li>
-                    <li><a href="">link</a></li>
-                    <li><a href="">link</a></li>
+                    <li>
+                        <a href="">Funzioni</a>
+                    </li>
+                    <li>
+                        <a href="">Piani e prezzi</a>
+                    </li>
                 </ul>
             </div>
             <div class="nav-right flex-between">
                 <ul>
-                    <li><a href="">link</a></li>
-                    <li><a href="">link</a></li>
-                    <li><a href="">link</a></li>
+                    <li>
+                        <a href="">Supporto</a>
+                    </li>
+                    <li>
+                        <a href="">Contatta l'ufficio vendite</a>
+                    </li>
+                    <li>
+                        <a href="">Accedi</a>
+                    </li>
                 </ul>
                 <button>Inizia</button>
             </div>
         </nav>
-
-        <section class="jumbotron container-big">
-            <h1>TITOLO</h1>
-            <div class="jumbotron-box flex-between">
-                <div class="jumbotron-info">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis modi esse, impedit expedita est
-                        quia sunt qui neque vero accusamus nesciunt iste doloremque sint dolore libero, velit id autem
-                        obcaecati!
-                    </p>
-                    <button>Inizia la tua prova gratuita</button>
-                    <p>Lorem</p>
-                    <p>&darr;</p>
-                </div>
-                <div class="jumbotron-img">IMG</div>
-            </div>
-        </section>
     </header>
 
     <main>
-        <section class="subscription-plan container-small">
+        <section class="jumbotron bg-lightblue">
+            <div class="container-big">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="jumbotron-box ">
+                    <img src="img/jumbo.png" alt="Dropbox Client Image">
+                    <div class="jumbotron-info clearfix-left">
+                        <div class="jumbotron-info-content">
+                            <p>
+                                Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo
+                                stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo
+                                intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                            </p>
+                            <button>Inizia la tua prova gratuita</button>
+                            <p>
+                                <a href="">Annulla in qualsiasi momento</a>
+                            </p>
+                            <p><i class="fa-solid fa-arrow-down"></i></p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="subscription-plan main-container">
             <h2>TITOLETTO</h2>
             <input type="radio" name="billing frequency" id="">
             <input type="radio" name="billing frequency" id="">
@@ -166,7 +185,7 @@
             </div>
         </section>
 
-        <section class="dropbox-partner container-small flex-between">
+        <section class="dropbox-partner main-container flex-between">
             <div>IMG</div>
             <div class="partner-info">
                 <h2>Titoletto</h2>
@@ -179,7 +198,7 @@
             </div>
         </section>
 
-        <section class="dropbox-business container-small">
+        <section class="dropbox-business main-container">
             <h2>TITOLETTO DROPBOX BUSINESS</h2>
             <div class="dbusiness-features flex-between">
                 <article class="feature-card">
@@ -239,7 +258,7 @@
             </div>
         </section>
 
-        <section class="container-small">
+        <section class="dropbox-business main-container">
             <h2>TITOLETTO</h2>
             <a href="">Scopri di più sui nostri clienti</a>
         </section>
@@ -276,14 +295,14 @@
             </div>
         </section>
 
-        <section class="bg-lightblue">
-            <div class="container-small flex-between">
+        <section class="dropbox-business bg-lightblue">
+            <div class="main-container flex-between">
                 <h2>TITOLETTO</h2>
                 <button class="btn-white">Inizia la tua prova gratuita</button>
             </div>
         </section>
 
-        <section class="faq container-small">
+        <section class="faq main-container">
             <h2>Domande frequenti</h2>
             <div class="question flex-between">
                 <p>
