changed .plan-card layout

--- a/index.html
+++ b/index.html
@@ -78,97 +78,121 @@
         </section>
 
         <section class="subscription-plan main-container">
-            <h2>TITOLETTO</h2>
-            <input type="radio" name="billing frequency" id="">
-            <input type="radio" name="billing frequency" id="">
+            <h2>Trova il piano business che fa per te</h2>
+            <input type="radio" name="billing frequency" id="monthly">
+            <label for="monthly">Fatturazione mensile</label>
+            <input type="radio" name="billing frequency" id="annually">
+            <label for="annually">Fatturazione annuale</label>
             <div class="sub-options flex-between">
                 <article class="plan-card">
-                    <p class="sub-user">User</p>
-                    <h3>Titolino</h3>
-                    <p class="sub-cost">10 &euro;</p>
-                    <p>/mese</p>
-                    <ul class="sub-benefit">
-                        <li>
-                            Lorem
-                        </li>
-                        <li>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        </li>
-                        <li>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, praesentium et ab, minus
-                            laborum quaerat minima libero ipsa quas ratione cumque eum laboriosam deleniti dicta
-                            dolores. Provident dignissimos voluptatibus inventore?
-                        </li>
-                    </ul>
-                    <button>
-                        Prova gratis per 30 giorni
-                    </button>
-                    <span>oppure</span><a href="">acquista ora</a>
-                    <ul class="sub-recap">Punti salienti del piano
-                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                    </ul>
+                    <p class="sub-user">
+                        <span>
+                            <i class="fa-solid fa-user"></i>
+                        </span>
+                        Singolo
+                    </p>
+                    <div class="card-content">
+                        <h3>Titolino</h3>
+                        <p class="sub-cost">10 &euro;</p>
+                        <p>/mese</p>
+                        <ul class="sub-benefit">
+                            <li>
+                                Lorem
+                            </li>
+                            <li>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            </li>
+                            <li>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, praesentium et ab, minus
+                                laborum quaerat minima libero ipsa quas ratione cumque eum laboriosam deleniti dicta
+                                dolores. Provident dignissimos voluptatibus inventore?
+                            </li>
+                        </ul>
+                        <button>
+                            Prova gratis per 30 giorni
+                        </button>
+                        <span>oppure</span><a href="">acquista ora</a>
+                        <ul class="sub-recap">Punti salienti del piano
+                            <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                            <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                        </ul>
+                    </div>
                 </article>
                 <article class="plan-card">
-                    <p class="sub-user">User</p>
-                    <h3>Titolino</h3>
-                    <p class="sub-cost">10 &euro;</p>
-                    <p>/mese</p>
-                    <ul class="sub-benefit">
-                        <li>
-                            Lorem
-                        </li>
-                        <li>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        </li>
-                        <li>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, praesentium et ab, minus
-                            laborum quaerat minima libero ipsa quas ratione cumque eum laboriosam deleniti dicta
-                            dolores. Provident dignissimos voluptatibus inventore?
-                        </li>
-                    </ul>
-                    <button>
-                        Prova gratis per 30 giorni
-                    </button>
-                    <span>oppure</span><a href="">acquista ora</a>
-                    <ul class="sub-recap">Punti salienti del piano
-                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                    </ul>
+                    <p class="sub-user">
+                        <span>
+                            <i class="fa-solid fa-users"></i>
+                        </span>
+                        Team
+                    </p>
+                    <div class="card-content">
+                        <h3>Titolino</h3>
+                        <p class="sub-cost">10 &euro;</p>
+                        <p>/mese</p>
+                        <ul class="sub-benefit">
+                            <li>
+                                Lorem
+                            </li>
+                            <li>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            </li>
+                            <li>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, praesentium et ab, minus
+                                laborum quaerat minima libero ipsa quas ratione cumque eum laboriosam deleniti dicta
+                                dolores. Provident dignissimos voluptatibus inventore?
+                            </li>
+                        </ul>
+                        <button>
+                            Prova gratis per 30 giorni
+                        </button>
+                        <span>oppure</span><a href="">acquista ora</a>
+                        <ul class="sub-recap">Punti salienti del piano
+                            <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                            <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                        </ul>
+                    </div>
                 </article>
                 <article class="plan-card">
-                    <p class="sub-user">User</p>
-                    <h3>Titolino</h3>
-                    <p class="sub-cost">10 &euro;</p>
-                    <p>/mese</p>
-                    <ul class="sub-benefit">
-                        <li>
-                            Lorem
-                        </li>
-                        <li>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        </li>
-                        <li>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, praesentium et ab, minus
-                            laborum quaerat minima libero ipsa quas ratione cumque eum laboriosam deleniti dicta
-                            dolores. Provident dignissimos voluptatibus inventore?
-                        </li>
-                    </ul>
-                    <button>
-                        Contattaci
-                    </button>
-                    <span>oppure</span><a href="">acquista ora</a>
-                    <ul class="sub-recap">Punti salienti del piano
-                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                        <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-                    </ul>
+                    <p class="sub-user">
+                        <span>
+                            <i class="fa-solid fa-building"></i>
+                        </span>
+                        Azienda
+                    </p>
+                    <div class="card-content">
+                        <h3>Titolino</h3>
+                        <p class="sub-cost">10 &euro;</p>
+                        <p>/mese</p>
+                        <ul class="sub-benefit">
+                            <li>
+                                Lorem
+                            </li>
+                            <li>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            </li>
+                            <li>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, praesentium et ab, minus
+                                laborum quaerat minima libero ipsa quas ratione cumque eum laboriosam deleniti dicta
+                                dolores. Provident dignissimos voluptatibus inventore?
+                            </li>
+                        </ul>
+                        <button>
+                            Prova gratis per 30 giorni
+                        </button>
+                        <span>oppure</span><a href="">acquista ora</a>
+                        <ul class="sub-recap">Punti salienti del piano
+                            <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                            <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+                        </ul>
+                    </div>
                 </article>
                 <article class="plan-card custom-plan">
-                    <p class="sub-user">User</p>
+                    <p class="sub-user">
+                        <span>
+                            <i class="fa-solid fa-building"></i>
+                        </span>
+                        Team
+                    </p>
                     <div class="flex-between">
                         <div>
                             <h3>Titolino</h3>
